# rust-template

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.loco-apps.yaml  docker-compose.loco-base.yaml  docker-compose.yaml  example-model.txt  load-test.js
.github/: dependabot.yml
.github/workflows/: cargo-audit.yaml  cross-compile.yaml  dependabot-approve-and-auto-merge.yaml  lint-rust.yaml  load-test.yaml  unused-deps.yaml
api/: .env  Cargo.toml  Dockerfile  Makefile
api-client/: Cargo.toml  README.md
api-client/.openapi-generator/: FILES
api-client/docs/: DefaultApi.md  SendCode.md  SendCodeResponse.md
api-client/src/apis/: configuration.rs  default_api.rs
api-client/src/models/: mod.rs  send_code.rs  send_code_response.rs
api/.sqlx/: query-14a8748854df35d882cdf1b57cde6d3595cf82e5443a79a5dc5bbdf316578114.json  query-1dba08f58f6399f0318f2f78bd0f79e23c5a9ddf300f1d35684edd1e075065f2.json  query-220beaa3eb440cac34825e073d8fe3cf285373fec79ef1919a9440a0e235988c.json  query-27bd3ce66b7e59fd9b260996169c1e93feff22db178b7a1732c6dce59138ccea.json  query-53d6db0d933c0434fd5a8eb3c866c9676e7a04e4233b0a5da143b554bc757b1f.json  query-813895357488539b944eb218d421678270b1069a8f88c026575fcf2f9ba6f845.json  query-8e38a6a1134bfaac4b9eead4bfc771ca1bc10d5fcacdff53252d5d0e019caf69.json  query-b1fccf7f1bbedd821b4dafdbdc49b46b1409a06a7b6f6cf1b024bb01d6b77ddb.json  query-ccacdb9b44a0fab42364696d91bbe5a006814c9221bb981f4b7b206757255bcc.json  query-d767aed5aed104bf81708f43b22dcd9afc62c1eb79daa79852f84f9d7cc24ba6.json
api/migrations/: 20230930195426_init.down.sql  20230930195426_init.up.sql  20231007122716_accounts-table.up.sql  20231015181006_users-table.up.sql  20231025154123_tokens-to-clients.down.sql  20231025154123_tokens-to-clients.up.sql  20231121212248_token-index.down.sql  20231121212248_token-index.up.sql
api/src/: app_state.rs  client_repository.rs  db.rs  db_init.rs  error.rs  handler.rs  lib.rs  main.rs  model.rs  repositories.rs  router.rs  routes.rs  schema.rs  usecases.rs  user_repository.rs
api/src/tests/: fixtures.rs  mod.rs  repositories.rs
loco-tools/: Cargo.toml
loco-tools/src/: lib.rs
loco-tools/src/initializers/: mod.rs  openfga.rs
openfga/: model.json
shared/: Cargo.toml
shared/src/: auth.rs  client.rs  error.rs  lib.rs  model.rs  openfga.rs  schema.rs  startup.rs  tracing.rs
website/: .env  .env.example  Cargo.toml  Dockerfile  Makefile
website/assets/styles/: styles.css
website/handlebars/: base0.hbs  loggedin.hbs  template2.hbs
website/locales/: core.ftl
website/locales/de-DE/: main.ftl
website/locales/en-US/: main.ftl
website/src/: app_state.rs  auth.rs  auth0.rs  handlers.rs  main.rs  protected_routes.rs  proxy_routes.rs  public_routes.rs  router.rs
website/templates/: base.html  hello.html  login.html  styles.html
website/tera/: about.html  header.html  index.html
