[package]
name = "api-server"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "api-server"

[dependencies]
axum = { version = "0.6.0", features = ["headers", "macros"] }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
tower-http = { version = "0.4.4", features = ["trace", "cors", "auth"] }
dotenvy = "0.15.7"
axum-otel-metrics = "0.6.0"
axum-tracing-opentelemetry = "0.15.0"
init-tracing-opentelemetry = { version = "0.15.0", features = [
  "otlp",
  "tracing_subscriber_ext",
]}
opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14.0", optional = true }
tracing-opentelemetry = "0.22"
tracing-opentelemetry-instrumentation-sdk = "0.15.0"
cargo-audit = "0.18.3"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
shared = { path = "../shared" }
anyhow = "1.0.75"
thiserror = "1.0.50"
axum-macros = "0.3.8"
argon2 = { version = "0.5.2", features = ["std"] }
secrecy = { version = "0.8", features = ["serde"] }
rand = { vesrion = "0.8.5", features = ["getrandom"]}
mockall = "0.12.0"
getrandom = "0.2.11"

[features]
otlp-over-http = ["opentelemetry-otlp/reqwest-client", "opentelemetry-otlp/reqwest-rustls", "opentelemetry-otlp/http-proto", "opentelemetry-otlp/tls"]

[dev-dependencies]
cargo-audit = "0.18.3"
