[package]
name = "api-server"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "api-server"

[dependencies]
anyhow = "1.0.75"
argon2 = { version = "0.5.2", features = ["std"] }
axum = { version = "0.6.0", features = ["headers", "macros"] }
dotenvy = "0.15.7"
mockall = "0.12.1"
rand = { vesrion = "0.8.5", features = ["getrandom"]}
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
shared = { path = "../shared" }
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
thiserror = "1.0.51"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1.40"
uuid = { version = "1.6.1", features = ["serde", "v4"] }

[dev-dependencies]
cargo-audit = "0.18.3"

[package.metadata.cargo-machete]
ignored = ["cargo-audit"]
