[package]
name = "loco-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.74" }
axum = {version = "0.7.4", features = ["macros"]}
axum-extra = "0.9.2"
tokio = { version = "1.25.0", features = ["time"] }
loco-rs = "0.3.1"
shared = { path = "../shared" }
