[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.0", features = ["headers", "macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
axum-tracing-opentelemetry = "0.14.1"
init-tracing-opentelemetry = { version = "0.14.1", features = [
  "otlp",
  "tracing_subscriber_ext",
]}
opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.13.0", optional = true }
tracing-opentelemetry = "0.21"
tracing-opentelemetry-instrumentation-sdk = "0.14.1"
anyhow = "1.0.75"
thiserror = "1.0.49"
axum-macros = "0.3.8"
sqlx = { version = "0.7.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
