[package]
name = "website"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12", default-features = false, features = ["with-axum", "mime", "mime_guess"]}
askama_axum = "0.3.0"
axum = "0.6.0"
axum-tracing-opentelemetry = "0.15.0"
axum_session = "0.7.0"
axum_session_auth = "0.7.0"
dotenvy = "0.15.7"
hyper = {version = "1.0.0", features = ["full"]}
opentelemetry = { version = "0.21.0", features = ["trace"] }
opentelemetry-otlp = "0.14.0"
reqwest = { version = "0.11.22", features = ["stream"] }
reqwest-middleware = "0.2.3"
reqwest-tracing = { version = "0.4.6", features = ["opentelemetry_0_20"] }
serde = "1.0.189"
serde_json = "1.0.108"
serde_urlencoded = "0.7.1"
shared = { path = "../shared" }
thiserror = "1.0.49"
tokio = { version = "1.35", features = ["full"] }
tower-http = {version = "0.4.4", features = ["fs"]}
tower-layer = "0.3.2"
tracing = "0.1"
tracing-opentelemetry = "0.22.0"
tracing-opentelemetry-instrumentation-sdk = "0.15.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
