[package]
name = "website"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12", default-features = false, features = ["with-axum", "mime", "mime_guess"]}
askama_axum = "0.3.0"
axum = "0.6.0"
axum-template = "2.0.0"
axum_session = "0.7.0"
axum_session_auth = "0.7.0"
fluent-templates = { version = "0.8.0", features = ["tera"] }
hyper = {version = "1.0.0", features = ["full"]}
reqwest = { version = "0.11.22", features = ["stream"] }
reqwest-middleware = "0.2.3"
serde = "1.0.189"
serde_json = "1.0.108"
shared = { path = "../shared" }
tera = "1.19.1"
tokio = { version = "1.35", features = ["full"] }
tower-http = {version = "0.4.4", features = ["fs"]}
tracing = "0.1"
uuid = { version = "1.6.1", features = ["serde", "v4"] }

[package.metadata.cargo-machete]
ignored = ["askama_axum"]
